Fixed button alignment, replaced marker shadow, added favicon

--- a/server/public/main.css
+++ b/server/public/main.css
@@ -218,6 +218,7 @@ label {
   width: 100vw;
   position: relative;
   overflow: auto;
+  box-shadow: 0 8px 12px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 
 .leaflet-container { 
@@ -225,7 +226,6 @@ label {
   width: 100vw;
   position: relative;
   overflow: auto;
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 
 .leaflet-popup-content-wrapper {
@@ -427,8 +427,6 @@ color: #1a2930;
   margin-top: 1rem;
 }
 
-
-
 .donations p {
   font-size: 1.2rem;
   padding: 0 1rem 0 1rem;
@@ -488,35 +486,52 @@ color: #1a2930;
 
 .companyList {
   position: relative;
-  padding: 1rem;
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-  font-size: 0.8rem;
+  width: 100%;
+  margin: 0 auto;
+  padding: 2rem 0.5rem 2.5rem 0.5rem;
+  font-size: 0.6rem;
+  border-top: 15px solid #314950;
+  background: rgb(245,245,245);
+  background: linear-gradient(180deg, rgba(245,245,245,1) 1%, rgba(228,226,226,1) 100%);
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+
+.companyList table {
+  width: 80%;
   max-width: 830px;
+  margin: 0 auto;
 }
 
 .companyList td, .companyList th {
-  padding: 10px 0 10px 0;
-  text-align: center;
+  padding: 0.5rem;
+  text-align: right;
+  color: #314950;
+}
+
+.companyList td {
+  color: #314950;
 }
 
 .companyList th {
-  color: #e4e2e2;
+  color: #1a2930;
+}
+
+.companyList tr {
+  border-bottom: 2px solid #8e9b9f;
 }
 
 .store-name {
   text-align: left;
 }
 
-.top-row {
-  border-bottom: 2px solid #8e9b9f;
-}
 .donate-circle, .redeem-circle {
   max-width: 280px;
   max-height: 280px;
 }
+
 .redeem-circle {
-  background-color: #1a2930;
+  background: rgb(35,50,56);
+  background: linear-gradient(180deg, rgba(35,50,56,1) 0%, rgba(26,41,48,1) 100%);
 }
 
 .redeem-circle p, .redeem-circle span {
@@ -611,17 +626,7 @@ color: #1a2930;
     margin-bottom: 3rem;
   }
   .companyList {
-    width: 90%;
-    position: relative;
-    padding: 1rem;
-    margin: auto;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
     font-size: 1.1rem;
-  }
-  .companyList td, .companyList th {
-    padding: 10px 2px 10px 2px;
-    text-align: center;
   }
 }
 
@@ -667,9 +672,6 @@ color: #1a2930;
   }
   .companyList {
     font-size: 1.2rem;
-  }
-  .companyList td, .companyList th {
-    padding: 10px 5px 10px 5px;
   }
 }
 
@@ -752,14 +754,11 @@ color: #1a2930;
     margin: 2.5rem;
   }
   .companyList {
-    width: 80%;
-    margin: auto;
-    margin-top: 4rem;
-    margin-bottom: 4rem;
-    font-size: 1.3rem;
+    padding: 3rem 2rem 3.5rem 2rem;
+    font-size: 1.2rem;
   }
   .companyList td, .companyList th {
-    padding: 15px;
+    padding: 1rem;
   }
   .footer {
     width: 100%;
@@ -802,7 +801,7 @@ color: #1a2930;
     font-size: 1.2rem;
   }
   .map, .locations, .leaflet-container { 
-    height: 500px; 
+    height: 600px; 
   }
   .login, .register {
     width: 60%;
@@ -819,10 +818,10 @@ color: #1a2930;
     font-size: 3.5rem;
   }
   .companyList {
-    width: 75%;
+    padding: 5rem;
   }
   .companyList td, .companyList th {
-    padding: 17px;
+    padding: 1.8rem;
   }
   .recharts-wrapper, .recharts-responsive-container {
     width: 75%;
@@ -842,8 +841,7 @@ color: #1a2930;
     top: 0;
   }
   .locations {
-    height: 500px;
-    width: 100%;
+    height: 700px;
   }
   .map { 
     height: 500px; 
@@ -865,13 +863,10 @@ color: #1a2930;
   }
   .total-balance p {
     padding-top: 3rem;
-    font-size: 1.6rem;
+    font-size: 1.5rem;
   }
   .donate-circle p, .redeem-circle p {
-    padding-top: 5rem;
-  }
-  .companyList td, .companyList th {
-    padding: 20px;
+    padding-top: 3rem;
   }
   .donations-buttons button {
     width: 18rem;
@@ -891,7 +886,10 @@ color: #1a2930;
     width: 100%;
   }
   .companyList {
-    width: 70%;
+    padding: 6rem;
+  }
+  .companyList td, .companyList th {
+    padding: 1.5rem 2.5rem;
   }
   .admin {
     position: relative;
@@ -905,8 +903,8 @@ color: #1a2930;
   }  
   .admin h2 {
     position: absolute;
-    width: 40%;
-    margin: auto;
+    width: 100%;
+    margin: 0 auto;
     padding-top: 2rem;
     font-size: 2.5rem;
   }
@@ -916,20 +914,19 @@ color: #1a2930;
   }
   .total-balance p {
     padding-top: 4rem;
-    font-size: 1.8rem;
+    font-size: 1.7rem;
   }
   .totalStats {
     display: block;
     width: 40%;
     margin-bottom: 1rem;
-    padding: 5rem 5rem 0 4rem;
+    padding: 2rem 5rem 2rem 4rem;
   }
   .donate-circle p, .redeem-circle p {
     padding-top: 4rem;
     font-size: 1.4rem;
   }
   .locations {
-    width: 60%;
     height: 800px;
   }
   .map, .leaflet-container {
@@ -958,7 +955,6 @@ color: #1a2930;
   }
   .total-balance p {
     padding-top: 3rem;
-    font-size: 2rem;
     line-height: 2rem;
   }
   .redeem .button, .donation .button {
@@ -973,11 +969,6 @@ color: #1a2930;
 @media only screen and (min-width: 1700px) {
   .storeprofile {
     width: 60%;
-  }
-  .total-balance p {
-    padding-top: 3rem;
-    font-size: 2rem;
-    line-height: 2rem;
   }
   .redeem .button, .donation .button {
     width: 15rem;
